test/spec_vectors/simd_i64x2_arith/fail/module_2.wat
(module (func (result v128) (i64x2.add (i32.const 0) (f32.const 0.0))))